changes of name in whole site

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "hometownherores",
-    "short_name": "hometownherores",
+    "name": "indie-grooves",
+    "short_name": "indie-grooves",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
